# huggingface-mcp-course

./: .env.template  .gitignore  README.md  pyproject.toml
huggingface_mcp_course/gradio_integration/: server.py
huggingface_mcp_course/pull_request_reviewer/: server.py  webhook_server.py
huggingface_mcp_course/sentiment_analyzer/: client.py  mcp.json  server.py
huggingface_mcp_course/utils/: ioutils.py
huggingface_mcp_course/weather-agent/: server.py
tests/pull_request_reviewer/: server.py
